Update dependencies and workflows